--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.0"
+    "mongo": "^0.1.0",
+    "mongoose": "^5.10.0",
+    "path": "^0.12.7"
   }
 }
